# capacities-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
.feat-tree/: CONTEXT.md  FEATURES.md  WORKFLOWS.md  features.db
.feat-tree/chroma/: chroma.sqlite3
.feat-tree/memories/: decisions.md  risks.md  scope.md  user.md
capacities_mcp/: __init__.py  server.py
capacities_sdk/: __init__.py  blocks.py  client.py  exceptions.py  models.py  test_blocks.py  test_bulk_export.py
capacities_sdk/mixins/: __init__.py  bulk.py  collections.py  export.py  graph.py  links.py  objects.py  official.py  spaces.py  tasks.py
tests/: test_collections_search.py  test_config.py  test_links.py  test_tasks.py
