[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capacities-sdk"
version = "0.1.0"
description = "Unofficial Python SDK and MCP server for Capacities.io with full CRUD operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Capacities SDK Contributors"}
]
keywords = ["capacities", "pkm", "knowledge-management", "mcp", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
capacities-mcp = "capacities_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-username/capacities-sdk"
Issues = "https://github.com/your-username/capacities-sdk/issues"

[tool.setuptools.packages.find]
include = ["capacities_sdk*", "capacities_mcp*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
